Croque Monsieur recipe

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <p>Here is the link to the 
-        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
-    </p>
+    <p>Here are the links to the recipes</p>
+
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/croquemonsieur.html">Croque Monsieur Recipe</a></li>
+    </ul>
+    
     
 </body>
 
